--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,15 +13,20 @@ on:
 jobs: 
   build:
     runs-on: ubuntu-latest
+    strategy: 
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+        
     steps:
       - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          pip3 install -r requirements.txt
-      - name: Run tests with pytest
-        run: python3 -m pytest .
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pytest .
