--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.20.1
-matplotlib==3.3.1
-torch==1.7.1
-pytest==6.2.4
-pandas==1.2.4
-tqdm==4.60.0
+numpy
+matplotlib
+torch
+pytest
+pandas
+tqdm
