--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ scikit-learn
 tqdm
 google-cloud-bigquery
 google-cloud-storage
+google-cloud-bigquery-storage
 xgboost
 bayesian-optimization
+pyarrow
