--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,13 +3,14 @@ ports:
     onOpen: ignore
 
 tasks:
-  - init: npm install
-    prebuild: |
-      python -m pip install --upgrade pip
-      pip install -r requirements.txt
+  - init: | 
+      npm install
       echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
       sudo apt-get install apt-transport-https ca-certificates gnupg --yes
       curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+    prebuild: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
       sudo apt-get update && sudo apt-get install google-cloud-sdk --yes
       sudo apt-get install google-cloud-sdk-app-engine-python google-cloud-sdk-app-engine-python-extras --yes
     command: |
