--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ ports:
 
 tasks:
   - init: npm install
-    command: |
+    prebuild: |
       python -m pip install --upgrade pip
       pip install -r requirements.txt
       
