--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,8 @@ ports:
   - port: 8080
 
 tasks:
-  - init: npm install
-    command: |
+  - init: |
+      npm install
       python -m pip install --upgrade pip
       pip install -r requirements.txt
       
