--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pytest
 pandas
 tqdm
 sklearn
-torch==1.9.0+cpu 
-torchvision==0.10.0+cpu 
-torchaudio==0.9.0
+torch
+torchvision
+torchaudio
+efficientnet_pytorch
